// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingView matches snapshot correctly 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="position: relative; pointer-events: unset; white-space: normal;"
  >
    <h1
      as="h1"
      class="mc-c-fHQyyx mc-c-fHQyyx-cOVgnz-level-1"
      data-node-view-content=""
      data-placeholder="placeholder.heading1"
      style="white-space: pre-wrap;"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 2 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="position: relative; pointer-events: unset; white-space: normal;"
  >
    <h2
      as="h2"
      class="mc-c-fHQyyx mc-c-fHQyyx-gPLAez-level-2"
      data-node-view-content=""
      data-placeholder="placeholder.heading2"
      style="white-space: pre-wrap;"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 3 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="position: relative; pointer-events: unset; white-space: normal;"
  >
    <h3
      as="h3"
      class="mc-c-fHQyyx mc-c-fHQyyx-llzMLw-level-3"
      data-node-view-content=""
      data-placeholder="placeholder.heading3"
      style="white-space: pre-wrap;"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 4 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="position: relative; pointer-events: unset; white-space: normal;"
  >
    <h4
      as="h4"
      class="mc-c-fHQyyx mc-c-fHQyyx-dWBeGD-level-4"
      data-node-view-content=""
      data-placeholder="placeholder.heading4"
      style="white-space: pre-wrap;"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 5 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="position: relative; pointer-events: unset; white-space: normal;"
  >
    <h5
      as="h5"
      class="mc-c-fHQyyx mc-c-fHQyyx-hCSGfy-level-5"
      data-node-view-content=""
      data-placeholder="placeholder.heading5"
      style="white-space: pre-wrap;"
    />
  </div>
</div>
`;
